mc integration phase 3